# Chronos-Resonance-Benchmark

./: LICENSE  README.md  chronos_resonance_v5.md  chronos_resonance_v6.md  paper_v1.2.md  paper_v4.0.md
cpp/: CMakeLists.txt  QuantumLib.hpp  quantum_benchmark.cpp
results/: amd_ryzen_log.txt  apple_m2_log.txt  intel_skylake_log.txt
swift/: Package.swift
swift/Sources/CShim/: shim.c
swift/Sources/CShim/include/: shim.h
swift/Sources/YukinekoBenchmark/: main.swift
